# Autosar_AP_SDC_Carla

./: .gitignore  .gitmodules  LICENSE  README.md
av-stack/: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  README.md  TEST_REPORT_2026-07-07.md  build_ap.sh  run_ap.sh  test_soa
av-stack/config/: bridge-env.sh  cyclonedds-local.xml  cyclonedds-peers.xml  ego_lidar.rviz  ego_motion.rviz  ego_odom_only.rviz  lidar.rviz  record_ego_bag.sh  vsomeip-av.json  zenoh-bridge-ros2dds-carla-jetson.json5  zenoh-bridge-ros2dds-carla-wsl.json5
av-stack/config/carla/: objects.json
av-stack/config/manifests/: av_execution_manifest.arxml  av_machine_manifest.arxml  av_service_instances.arxml  av_service_interfaces.arxml  service_instance_mapping.yaml
av-stack/src/av_ap/include/av_ap/: ap.hpp  ara_com.hpp  ara_com_target_bindings.hpp  av_services.hpp
av-stack/src/av_ap/test/: test_ap_integration.cpp
av-stack/src/av_bringup/: CMakeLists.txt  package.xml
av-stack/src/av_bringup/config/: params.yaml
av-stack/src/av_bringup/launch/: av_stack.launch.py
av-stack/src/av_common/: CMakeLists.txt  package.xml
av-stack/src/av_common/include/av_common/: ap_main.hpp  math.hpp  types.hpp
av-stack/src/av_control/: CMakeLists.txt  package.xml
av-stack/src/av_control/include/av_control/: control_app.hpp  controller_core.hpp  safe_stop_app.hpp
av-stack/src/av_control/src/: control_app_main.cpp  control_node.cpp  controller_core.cpp  safe_stop_app_main.cpp
av-stack/src/av_control/test/: test_controller_core.cpp
av-stack/src/av_gateway/include/av_gateway/: carla_bridge.hpp
av-stack/src/av_gateway/src/: carla_bridge.cpp  carla_gateway_node.cpp
av-stack/src/av_integration_tests/: CMakeLists.txt  package.xml
av-stack/src/av_integration_tests/test/: test_pipeline.cpp  test_soa_pipeline.cpp
av-stack/src/av_localization/: CMakeLists.txt  package.xml
av-stack/src/av_localization/include/av_localization/: ekf_localizer.hpp  localization_app.hpp
av-stack/src/av_localization/src/: ekf_localizer.cpp  localization_app_main.cpp  localization_node.cpp
av-stack/src/av_localization/test/: test_ekf_localizer.cpp
av-stack/src/av_msgs/: CMakeLists.txt  package.xml
av-stack/src/av_msgs/msg/: ControlCommand.msg  DetectedObject.msg  DetectedObjectArray.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleState.msg
av-stack/src/av_perception/: CMakeLists.txt  package.xml
av-stack/src/av_perception/include/av_perception/: perception_app.hpp  perception_core.hpp
av-stack/src/av_perception/src/: perception_app_main.cpp  perception_core.cpp  perception_node.cpp
av-stack/src/av_perception/test/: test_perception_core.cpp
av-stack/src/av_planning/: CMakeLists.txt  package.xml
av-stack/src/av_planning/include/av_planning/: planner_core.hpp  planning_app.hpp
av-stack/src/av_planning/src/: planner_core.cpp  planning_app_main.cpp  planning_node.cpp
av-stack/src/av_planning/test/: test_planner_core.cpp
av-stack/src/av_simulator/: CMakeLists.txt  package.xml
av-stack/src/av_simulator/src/: simulator_node.cpp
av-stack/tools/: CMakeLists.txt  pipeline_demo.cpp  udp_sender.hpp
av-stack/unreal/: AvReplayActor.cpp  AvReplayActor.h  AvUdpReceiverActor.cpp  AvUdpReceiverActor.h  README_UE4.md
av-stack/viz/: av_viewer.html  sample_av_trace.csv
patches/: add-carla_msgs.patch
