<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>av_integration_tests</name>
  <version>0.1.0</version>
  <description>End-to-end integration tests wiring all four av-stack cores.</description>
  <maintainer email="baonguyenpro@gmail.com">Bao Nguyen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>av_common</test_depend>
  <test_depend>av_perception</test_depend>
  <test_depend>av_localization</test_depend>
  <test_depend>av_planning</test_depend>
  <test_depend>av_control</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
